--- a/_src/client/_utilities.scss
+++ b/_src/client/_utilities.scss
@@ -7,25 +7,24 @@
 // ===========
 // TYPOGRAPHY
 // ===========
-.client-name-has-text-white {
+.colliers-has-text-white {
   color: #fff !important;
 }
 
-.client-name-has-text-brand-two {
+.colliers-has-text-brand-two {
   color: $brand-two !important;
 }
 
-.client-name-heading-icon {
-  max-width: 35px !important;
-  max-height: 35px !important;
-  margin-right: 0.5em !important;
+.colliers-font-shrink {
+  font-size: 0.9em !important;
+  line-height: 1.4 !important;
 }
 
 
 // ========
 // SPACING
 // ========
-.client-name-pad-y {
+.colliers-pad-y {
   padding-top: 30px !important;
   padding-bottom: 30px !important;
   &-more {
@@ -34,21 +33,21 @@
   }
 }
 
-.client-name-pad-t {
+.colliers-pad-t {
   padding-top: 30px !important;
   &-more {
     padding-top: 60px !important;
   }
 }
 
-.client-name-pad-b {
+.colliers-pad-b {
   padding-bottom: 30px !important;
   &-more {
     padding-bottom: 60px !important;
   }
 }
 
-.client-name-pad-x {
+.colliers-pad-x {
   padding-left: 30px !important;
   padding-right: 30px !important;
   &-more {
@@ -57,21 +56,21 @@
   }
 }
 
-.client-name-pad-l {
+.colliers-pad-l {
   padding-left: 30px !important;
   &-more {
     padding-left: 60px !important;
   }
 }
 
-.client-name-pad-r {
+.colliers-pad-r {
   padding-right: 30px !important;
   &-more {
     padding-right: 60px !important;
   }
 }
 
-.client-name-mar-y {
+.colliers-mar-y {
   margin-top: 30px !important;
   margin-bottom: 30px !important;
   &-more {
@@ -80,14 +79,14 @@
   }
 }
 
-.client-name-mar-t {
+.colliers-mar-t {
   margin-top: 30px !important;
   &-more {
     margin-top: 60px !important;
   }
 }
 
-.client-name-mar-b {
+.colliers-mar-b {
   margin-bottom: 30px !important;
   &-more {
     margin-bottom: 60px !important;
@@ -95,9 +94,12 @@
   &-neg {
     margin-bottom: -30px !important;
   }
+  &-none {
+    margin-bottom: 0px !important;
+  }
 }
 
-.client-name-mar-x {
+.colliers-mar-x {
   margin-left: 30px !important;
   margin-right: 30px !important;
   @media screen and (max-width: 568px) {
@@ -110,20 +112,20 @@
   }
 }
 
-.client-name-mar-l {
+.colliers-mar-l {
   margin-left: 30px !important;
   &-more {
     margin-left: 60px !important;
   }
 }
 
-.client-name-mar-r {
+.colliers-mar-r {
   margin-right: 30px !important;
   &-more {
     margin-right: 60px !important;
   }
 }
 
-.client-name-b-a {
+.colliers-b-a {
   border: 1px solid #fff;
 }
